--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>The Game of 15</title>
-  <link rel="stylesheet" href="css/">
+  <link rel="stylesheet" href="css/fifteen.css">
 </head>
 
 <body>
