--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <canvas id="board"></canvas>
+  <p>Moves: <span id="moveCount">0</span></p>
   <script src="js/fifteen.js"></script>
 </body>
 </html>
