Refactor some functions into an app module

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
   <canvas id="board"></canvas>
   <p>Moves: <span id="moveCount">0</span></p>
+  <select onchange="myFunction()">
+    <option value="3">3x3</option>
+    <option value="4">4x4</option>
+    <option value="5">5x5</option>
+    <option value="6">6x6</option>
+    <option value="7">7x7</option>
+    <option value="8">8x8</option>
+    <option value="9">9x9</option>
+  </select>
   <script src="js/fifteen.js"></script>
 </body>
 </html>
