--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <canvas id="board"></canvas>
   <p>Moves: <span id="moveCount">0</span></p>
-  <select onchange="myFunction()">
+  <select id="selectSize" onchange="app.selectSize()">
     <option value="3">3x3</option>
-    <option value="4">4x4</option>
+    <option selected="selected" value="4">4x4</option>
     <option value="5">5x5</option>
     <option value="6">6x6</option>
     <option value="7">7x7</option>
