Add background image and board opacity

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="css/fifteen.css">
 </head>
 
-<body>
+<body class="bg">
   <div>
     <canvas id="board"></canvas>
     <div class="center">
       <p>Moves: <span id="moveCount">0</span></p>
     </div>
-    <div>
+    <div class="center">
       <select id="selectSize" onchange="app.selectSize()">
         <option value="3">3x3</option>
         <option selected="selected" value="4">4x4</option>
