--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body class="bg">
   <div>
+    <div class="center">
+      <p id="title">Game of 15</p>
+    </div>
     <canvas id="board"></canvas>
     <div class="center">
       <p>Moves: <span id="moveCount">0</span></p>
