--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/fifteen.css">
 </head>
 
-<body class="bg">
+<body>
   <div>
     <div class="center">
       <p id="title">Game of 15</p>
