--- a/index.html
+++ b/index.html
@@ -9,31 +9,38 @@
 </head>
 
 <body>
-  <div>
-    <div class="center">
-      <p id="title">Mystic Square</p>
-    </div>
-    <div class="center">
-      <div class="stat">
-        <p>Moves: <span id="moveCount">0</span></p>
+  <div class="center">
+    <div>
+      <div class="center">
+        <p id="title">Mystic Square</p>
       </div>
-      <div class="stat">
-        <p>Timer: <label id="minutes">00</label>:<label id="seconds">00</label></p>
+      <div class="center">
+        <div id="moveCountDiv" class="stat">
+          <p>Moves: <span id="moveCount">0</span></p>
+        </div>
+        <div id="timerDiv" class="stat">
+          <p>Timer: <label id="minutes">00</label>:<label id="seconds">00</label></p>
+        </div>
+      </div>
+      <canvas id="board"></canvas>
+      <div class="center">
+        <select id="selectSize" onchange="app.selectSize()">
+          <option value="3">3x3</option>
+          <option selected="selected" value="4">4x4</option>
+          <option value="5">5x5</option>
+          <option value="6">6x6</option>
+          <option value="7">7x7</option>
+          <option value="8">8x8</option>
+          <option value="9">9x9</option>
+        </select>
       </div>
     </div>
-    <canvas id="board"></canvas>
-    <div class="center">
-      <select id="selectSize" onchange="app.selectSize()">
-        <option value="3">3x3</option>
-        <option selected="selected" value="4">4x4</option>
-        <option value="5">5x5</option>
-        <option value="6">6x6</option>
-        <option value="7">7x7</option>
-        <option value="8">8x8</option>
-        <option value="9">9x9</option>
-      </select>
+    <div id="instructions">
+      <h3>Instructions</h3>
+      <p>Move tiles in grid into ascending order. To move a tile you can click on it or use your arrow keys.</p>
     </div>
   </div>
+
   
   <script src="js/fifteen.js"></script>
 </body>
