Add Start screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <canvas id="board"></canvas>
       <div class="center">
-        <select id="selectSize" onchange="app.selectSize()">
+        <select id="selectSize" onchange="app.getReady()">
           <option value="3">3x3</option>
           <option selected="selected" value="4">4x4</option>
           <option value="5">5x5</option>
