--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       <p>Move tiles in grid into ascending order. To move a tile you can click on it or use your arrow keys.</p>
     </div>
   </div>
-  <script src="js/fifteen.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/board.js"></script>
+  <script src="js/moveCount.js"></script>
+  <script src="js/timer.js"></script>
+  <script src="js/handler.js"></script>
+  <script src="js/view.js"></script>
+  <script src="js/util.js"></script>
 </body>
 </html>
