Add leaderboard title and alignment of instructions and leaderboard

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     </div>
     <div>
       <div id="instructions">
-        <h3>Instructions</h3>
+        <h2>Instructions</h2>
         <p>Move tiles in grid into ascending order. To move a tile you can click on it or use your arrow keys.</p>
       </div>
       <div id="leaderBoardDiv">
+        <h2>Leaderboard</h2>
         <table id="leaderBoard">
           <thead>
             <tr>
