Center info section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="select-size">
         <select class="input" id="selectSize" onchange="game.getReady()">
-          <option value="3">3x3</option>
-          <option selected="selected" value="4">4x4</option>
+          <option selected="selected" value="3">3x3</option>
+          <option value="4">4x4</option>
           <option value="5">5x5</option>
           <option value="6">6x6</option>
         </select>
@@ -43,7 +43,7 @@
     <div class="info">
       <div class="instructions">
         <h2>Instructions</h2>
-        <p>Move tiles in grid into ascending order. To move a tile you can click on it or use your arrow keys.</p>
+        <p>Move tiles into ascending order. To move a tile you can click on it or use your arrow keys.</p>
       </div>
       <div class="leaderboard">
         <h2>Leaderboard</h2>
