Change stat font to courier new

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         </div>
         <div class="stats--stat" id="timerDiv">
           <p class="label">Time</p>
-          <p>
-            <span id="minutes">00</span>:
-            <span id="seconds">00</span>
-          </p>
+          <div>
+            <span id="minutes">00</span>:<span id="seconds">00</span>
+          </div>
         </div>
       </div>
       <div class="canvas">
