Change stat padding and margin

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>Move tiles into ascending order. To move a tile you can click on it or use your arrow keys.</p>
       </div>
       <div class="leaderboard">
-        <h2>Leaderboard</h2>
+        <h2>Personal Leaderboard</h2>
         <table class="leaderboard--table" id="leaderBoard">
           <thead>
             <tr>
