Change board to fit screen on smaller devices

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="canvas">
-        <canvas id="board"></canvas>
+        <canvas class="board" id="board"></canvas>
       </div>
       <div class="select-size">
         <select class="input" id="selectSize" onchange="game.getReady()">
