Configure webpack for sass

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mystic Square</title>
-  <link href="/styles/styles.css" rel="stylesheet">
+  <link href="/dist/main.css" rel="stylesheet">
   <link href="/images/favicon.png" rel="icon">
 </head>
 
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <script src="/scripts/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
