Bundle with Parcel instead of Webpack

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mystic Square</title>
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-  <link href="/dist/main.css" rel="stylesheet">
-  <link href="/images/favicon.png" rel="icon">
 </head>
 
 <body>
@@ -55,7 +53,7 @@
     </section>
   </div>
 
-  <script src="/dist/bundle.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
